VERILOG_TOWN/VerilogSimulator/target/generated-sources/antlr4/VerilogSimulator/Verilog2001Parser.java
// Generated from Verilog2001.g4 by ANTLR 4.2.2
package VerilogSimulator;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Verilog2001Parser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__30=1, T__29=2, T__28=3, T__27=4, T__26=5, T__25=6, T__24=7, T__23=8, 
		T__22=9, T__21=10, T__20=11, T__19=12, T__18=13, T__17=14, T__16=15, T__15=16, 
		T__14=17, T__13=18, T__12=19, T__11=20, T__10=21, T__9=22, T__8=23, T__7=24, 
		T__6=25, T__5=26, T__4=27, T__3=28, T__2=29, T__1=30, T__0=31, White_space=32, 
		Unsigned_number=33, Decimal_base=34, Binary_base=35, Octal_base=36, Hex_base=37, 
		One_line_comment=38, Block_comment=39, Simple_identifier=40, Escaped_identifier=41, 
		SUB=42, TILDE=43, MULT=44, DIV=45, MOD=46, ADD=47, BITWISE_AND=48, BITWISE_NAND=49, 
		BITWISE_OR=50, BITWISE_NOR=51, BITWISE_XOR=52, BITWISE_XNOR=53, SHIFT_LEFT=54, 
		SHIFT_RIGHT=55, GT=56, GTE=57, LT=58, LTE=59, NOTEQUAL=60, EQUAL=61, LOGICAL_AND=62, 
		LOGICAL_OR=63, LOGICAL_NOT=64;
	public static final String[] tokenNames = {
		"<INVALID>", "'['", "'or'", "'negedge'", "'case'", "'endcase'", "'assign'", 
		"')'", "'parameter'", "'always'", "'@'", "'='", "'module'", "'@(*)'", 
		"'output'", "'begin'", "'posedge'", "']'", "'input'", "'wire'", "'default'", 
		"','", "':'", "'('", "'if'", "'endmodule'", "'?'", "'else'", "'.'", "'reg'", 
		"';'", "'end'", "White_space", "Unsigned_number", "Decimal_base", "Binary_base", 
		"Octal_base", "Hex_base", "One_line_comment", "Block_comment", "Simple_identifier", 
		"Escaped_identifier", "'-'", "'~'", "'*'", "'/'", "'%'", "'+'", "'&'", 
		"'~&'", "'|'", "'~|'", "'^'", "'~^'", "'<<'", "'>>'", "'>'", "'>='", "'<'", 
		"'<='", "'!='", "'=='", "'&&'", "'||'", "'!'"
	};
	public static final int
		RULE_inst_name = 0, RULE_source_text = 1, RULE_description = 2, RULE_module_declaration = 3, 
		RULE_list_of_ports = 4, RULE_port = 5, RULE_port_reference = 6, RULE_module_item = 7, 
		RULE_port_declaration = 8, RULE_parameter_declaration = 9, RULE_parameter_declaration_ = 10, 
		RULE_list_of_param_assignments = 11, RULE_param_assignment = 12, RULE_input_declaration = 13, 
		RULE_output_declaration = 14, RULE_reg_declaration = 15, RULE_net_declaration = 16, 
		RULE_module_instantiation = 17, RULE_module_instance = 18, RULE_name_of_instance = 19, 
		RULE_list_of_port_connections = 20, RULE_continuous_assign = 21, RULE_always_construct = 22, 
		RULE_statement = 23, RULE_blocking_assignment = 24, RULE_nonblocking_assignment = 25, 
		RULE_variable_lvalue = 26, RULE_conditional_statement = 27, RULE_case_statement = 28, 
		RULE_case_item = 29, RULE_constant_expression = 30, RULE_range_expression = 31, 
		RULE_expression = 32, RULE_range = 33, RULE_msb_constant_expression = 34, 
		RULE_lsb_constant_expression = 35, RULE_instance_identifier = 36, RULE_module_identifier = 37, 
		RULE_module_instance_identifier = 38, RULE_topmodule_identifier = 39, 
		RULE_identifier_types = 40, RULE_list_of_identifiers = 41, RULE_identifier = 42, 
		RULE_number = 43, RULE_decimal_number = 44, RULE_binary_number = 45, RULE_octal_number = 46, 
		RULE_hex_number = 47;
	public static final String[] ruleNames = {
		"inst_name", "source_text", "description", "module_declaration", "list_of_ports", 
		"port", "port_reference", "module_item", "port_declaration", "parameter_declaration", 
		"parameter_declaration_", "list_of_param_assignments", "param_assignment", 
		"input_declaration", "output_declaration", "reg_declaration", "net_declaration", 
		"module_instantiation", "module_instance", "name_of_instance", "list_of_port_connections", 
		"continuous_assign", "always_construct", "statement", "blocking_assignment", 
		"nonblocking_assignment", "variable_lvalue", "conditional_statement", 
		"case_statement", "case_item", "constant_expression", "range_expression", 
		"expression", "range", "msb_constant_expression", "lsb_constant_expression", 
		"instance_identifier", "module_identifier", "module_instance_identifier", 
		"topmodule_identifier", "identifier_types", "list_of_identifiers", "identifier", 
		"number", "decimal_number", "binary_number", "octal_number", "hex_number"
	};

	@Override
	public String getGrammarFileName() { return "Verilog2001.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Verilog2001Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Inst_nameContext extends ParserRuleContext {
		public List<Instance_identifierContext> instance_identifier() {
			return getRuleContexts(Instance_identifierContext.class);
		}
		public Topmodule_identifierContext topmodule_identifier() {
			return getRuleContext(Topmodule_identifierContext.class,0);
		}
		public Instance_identifierContext instance_identifier(int i) {
			return getRuleContext(Instance_identifierContext.class,i);
		}
		public Inst_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inst_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).enterInst_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).exitInst_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Verilog2001Visitor ) return ((Verilog2001Visitor<? extends T>)visitor).visitInst_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Inst_nameContext inst_name() throws RecognitionException {
		Inst_nameContext _localctx = new Inst_nameContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inst_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); topmodule_identifier();
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==28) {
				{
				{
				setState(97); match(28);
				setState(98); instance_identifier();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Source_textContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Verilog2001Parser.EOF, 0); }
		public List<DescriptionContext> description() {
			return getRuleContexts(DescriptionContext.class);
		}
		public DescriptionContext description(int i) {
			return getRuleContext(DescriptionContext.class,i);
		}
		public Source_textContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).enterSource_text(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).exitSource_text(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Verilog2001Visitor ) return ((Verilog2001Visitor<? extends T>)visitor).visitSource_text(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Source_textContext source_text() throws RecognitionException {
		Source_textContext _localctx = new Source_textContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_source_text);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==12) {
				{
				{
				setState(104); description();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptionContext extends ParserRuleContext {
		public Module_declarationContext module_declaration() {
			return getRuleContext(Module_declarationContext.class,0);
		}
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).exitDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Verilog2001Visitor ) return ((Verilog2001Visitor<? extends T>)visitor).visitDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_description);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); module_declaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Module_declarationContext extends ParserRuleContext {
		public List_of_portsContext list_of_ports() {
			return getRuleContext(List_of_portsContext.class,0);
		}
		public List<Module_itemContext> module_item() {
			return getRuleContexts(Module_itemContext.class);
		}
		public Module_itemContext module_item(int i) {
			return getRuleContext(Module_itemContext.class,i);
		}
		public Module_identifierContext module_identifier() {
			return getRuleContext(Module_identifierContext.class,0);
		}
		public Module_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).enterModule_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).exitModule_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Verilog2001Visitor ) return ((Verilog2001Visitor<? extends T>)visitor).visitModule_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_declarationContext module_declaration() throws RecognitionException {
		Module_declarationContext _localctx = new Module_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_module_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(12);
			setState(115); module_identifier();
			setState(117);
			_la = _input.LA(1);
			if (_la==23) {
				{
				setState(116); list_of_ports();
				}
			}

			setState(119); match(30);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 6) | (1L << 8) | (1L << 9) | (1L << 14) | (1L << 18) | (1L << 19) | (1L << 29) | (1L << Simple_identifier) | (1L << Escaped_identifier))) != 0)) {
				{
				{
				setState(120); module_item();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126); match(25);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_of_portsContext extends ParserRuleContext {
		public List<PortContext> port() {
			return getRuleContexts(PortContext.class);
		}
		public PortContext port(int i) {
			return getRuleContext(PortContext.class,i);
		}
		public List_of_portsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_of_ports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).enterList_of_ports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).exitList_of_ports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Verilog2001Visitor ) return ((Verilog2001Visitor<? extends T>)visitor).visitList_of_ports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_of_portsContext list_of_ports() throws RecognitionException {
		List_of_portsContext _localctx = new List_of_portsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_list_of_ports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); match(23);
			setState(129); port();
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==21) {
				{
				{
				setState(130); match(21);
				setState(131); port();
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(137); match(7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PortContext extends ParserRuleContext {
		public Port_referenceContext port_reference() {
			return getRuleContext(Port_referenceContext.class,0);
		}
		public PortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).enterPort(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).exitPort(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Verilog2001Visitor ) return ((Verilog2001Visitor<? extends T>)visitor).visitPort(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PortContext port() throws RecognitionException {
		PortContext _localctx = new PortContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_port);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			_la = _input.LA(1);
			if (_la==Simple_identifier || _la==Escaped_identifier) {
				{
				setState(139); port_reference();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Port_referenceContext extends ParserRuleContext {
		public Constant_expressionContext constant_expression() {
			return getRuleContext(Constant_expressionContext.class,0);
		}
		public Range_expressionContext range_expression() {
			return getRuleContext(Range_expressionContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Port_referenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port_reference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).enterPort_reference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).exitPort_reference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Verilog2001Visitor ) return ((Verilog2001Visitor<? extends T>)visitor).visitPort_reference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Port_referenceContext port_reference() throws RecognitionException {
		Port_referenceContext _localctx = new Port_referenceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_port_reference);
		try {
			setState(153);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(142); identifier();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(143); identifier();
				setState(144); match(1);
				setState(145); constant_expression();
				setState(146); match(17);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(148); identifier();
				setState(149); match(1);
				setState(150); range_expression();
				setState(151); match(17);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Module_itemContext extends ParserRuleContext {
		public Always_constructContext always_construct() {
			return getRuleContext(Always_constructContext.class,0);
		}
		public Module_instantiationContext module_instantiation() {
			return getRuleContext(Module_instantiationContext.class,0);
		}
		public Net_declarationContext net_declaration() {
			return getRuleContext(Net_declarationContext.class,0);
		}
		public Parameter_declarationContext parameter_declaration() {
			return getRuleContext(Parameter_declarationContext.class,0);
		}
		public Continuous_assignContext continuous_assign() {
			return getRuleContext(Continuous_assignContext.class,0);
		}
		public Port_declarationContext port_declaration() {
			return getRuleContext(Port_declarationContext.class,0);
		}
		public Reg_declarationContext reg_declaration() {
			return getRuleContext(Reg_declarationContext.class,0);
		}
		public Module_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).enterModule_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).exitModule_item(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Verilog2001Visitor ) return ((Verilog2001Visitor<? extends T>)visitor).visitModule_item(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_itemContext module_item() throws RecognitionException {
		Module_itemContext _localctx = new Module_itemContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_module_item);
		try {
			setState(164);
			switch (_input.LA(1)) {
			case 14:
			case 18:
				enterOuterAlt(_localctx, 1);
				{
				setState(155); port_declaration();
				setState(156); match(30);
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 2);
				{
				setState(158); net_declaration();
				}
				break;
			case 29:
				enterOuterAlt(_localctx, 3);
				{
				setState(159); reg_declaration();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 4);
				{
				setState(160); parameter_declaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 5);
				{
				setState(161); continuous_assign();
				}
				break;
			case Simple_identifier:
			case Escaped_identifier:
				enterOuterAlt(_localctx, 6);
				{
				setState(162); module_instantiation();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 7);
				{
				setState(163); always_construct();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Port_declarationContext extends ParserRuleContext {
		public Output_declarationContext output_declaration() {
			return getRuleContext(Output_declarationContext.class,0);
		}
		public Input_declarationContext input_declaration() {
			return getRuleContext(Input_declarationContext.class,0);
		}
		public Port_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).enterPort_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).exitPort_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Verilog2001Visitor ) return ((Verilog2001Visitor<? extends T>)visitor).visitPort_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Port_declarationContext port_declaration() throws RecognitionException {
		Port_declarationContext _localctx = new Port_declarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_port_declaration);
		try {
			setState(168);
			switch (_input.LA(1)) {
			case 18:
				enterOuterAlt(_localctx, 1);
				{
				setState(166); input_declaration();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 2);
				{
				setState(167); output_declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parameter_declarationContext extends ParserRuleContext {
		public Parameter_declaration_Context parameter_declaration_() {
			return getRuleContext(Parameter_declaration_Context.class,0);
		}
		public Parameter_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).enterParameter_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).exitParameter_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Verilog2001Visitor ) return ((Verilog2001Visitor<? extends T>)visitor).visitParameter_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Parameter_declarationContext parameter_declaration() throws RecognitionException {
		Parameter_declarationContext _localctx = new Parameter_declarationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parameter_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170); parameter_declaration_();
			setState(171); match(30);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parameter_declaration_Context extends ParserRuleContext {
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public List_of_param_assignmentsContext list_of_param_assignments() {
			return getRuleContext(List_of_param_assignmentsContext.class,0);
		}
		public Parameter_declaration_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter_declaration_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).enterParameter_declaration_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Verilog2001Listener ) ((Verilog2001Listener)listener).exitParameter_declaration_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Verilog2001Visitor ) return ((Verilog2001Visitor<? extends T>)visitor).visitParameter_declaration_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Parameter_declaration_Context parameter_declaration_() throws RecognitionException {
		Parameter_declaration_Context _localctx = new Parameter_declaration_Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_parameter_declaration_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173); match(8);
			setState(175);
			_la = _input.LA(1);
			if (_la==1) {
				{
				setState(174); range();
				}
			}

			setState(177); list_of_param_assignments();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
